teams section updates & hero image overlap fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5858,7 +5858,7 @@ header.header-visible .button {
     margin-top: 0;
   }
   .dao-hero-proposals {
-    margin-top: -200px !important;
+    // margin-top: -200px !important;
     margin-left: 100px;
   }
   .utility-wrapper {
