--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -68,12 +68,14 @@
   // align-items: center;
   margin-top: -80px;
   justify-content: center;
+  min-height: 1200px;
 }
 
 .spec-home-background::after {
   content: "";
   width: 100%;
   height: 125vh;
+  min-height: 1107px;
   position: absolute;
   top: 0;
   left: 0;
@@ -100,7 +102,6 @@
   .spec-home-background {
     height: 147vh;
   }
-
   .spec-home-background::after {
     height: 140vh;
   }
